[tool.poetry]
name = "gen-ai-chat-ui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gen_ai_chat_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
